@@ -29,11 +29,7 @@
             <version>2.3.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.spark</groupId>
-            <artifactId>spark-mllib_2.11</artifactId>
-            <version>2.3.1</version>
-        </dependency>
+
 
         <!-- Hadoop Dependency for Winutils -->
         <dependency>
@@ -62,7 +58,6 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <compilerArgs>
-            <arg>--add-opens=java.base/java.net=ALL-UNNAMED</arg>
         </compilerArgs>
                 </configuration>
             </plugin>
